--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,7 @@ color: var(--accent-color);
 /* ========team====== */
 .team{
     padding-top: 94px;
+    padding-bottom: 94px;
     background: var(--srcond-background-color);
 }
 .team-list{
@@ -220,23 +221,25 @@ color: var(--accent-color);
         margin-left: auto;
         margin-right: auto;
 }
-
-.team-item:not(:last-child){
-    margin-right: 30px;
-    
-}
 .team-item{
+    background-color: var(--second-accent-color);
+    padding-bottom: 30px;
+}
+.team-img{
+    margin-bottom: 30px;
+}
+.team-list   {
 display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: var(--second-accent-color)
-    
+   justify-content: space-between;
+   flex-wrap: wrap;
+ 
 }
 .team-title{
         font-weight: 500;
         font-size: 16px;
         line-height: 1.18;
         text-align: center;
+        margin-bottom: 10px;
 }
 .team-text  {
         font-size: 16px;
@@ -248,6 +251,9 @@ display: flex;
 
 .footer{
     background: var(--background-color);
+    padding-top: 60px;
+    padding-left: 216px;
+    padding-bottom: 60px;
 }
 .footer-adress,
 .footer-mail,
